--- a/common/wpa_supplicant.conf
+++ b/common/wpa_supplicant.conf
@@ -1,4 +1,4 @@
-ctrl_interface=DIR=/data/system/wpa_supplicant GROUP=1010
+ctrl_interface=DIR=/data/system/wpa_supplicant GROUP=system
 update_config=1
 eapol_version=1
 ap_scan=1
